--- a/index.html
+++ b/index.html
@@ -1,60 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<!--
+  SPDX-FileCopyrightText: 2023 The Pion community <https://pion.ly>
+  SPDX-License-Identifier: MIT
+-->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Screen Sharing with WebRTC</title>
+    <meta charset="utf-8">
 </head>
 <body>
-<h1>Screen Sharing with WebRTC</h1>
-<button id="start">Start Sharing</button>
-<video id="video" autoplay playsinline></video>
+<h3> Local Video </h3>
+<video id="localVideo" width="160" height="120" autoplay muted></video> <br />
+
+<h3> Remote Video </h3>
+<div id="remoteVideos"></div> <br />
+
+<h3> Logs </h3>
+<div id="logs"></div>
+
+
+</body>
 
 <script>
-    const video = document.getElementById('video');
-    let localStream;
+    navigator.mediaDevices.getDisplayMedia({ video: true, audio: true })
+        .then(stream => {
+            let pc = new RTCPeerConnection();
 
-    document.getElementById('start').onclick = async () => {
-        localStream = await navigator.mediaDevices.getDisplayMedia({ video: true });
-        video.srcObject = localStream;
+            pc.ontrack = function (event) {
+                if (event.track.kind === 'audio') {
+                    return;
+                }
 
-        const ws = new WebSocket('ws://localhost:8080/ws');
+                let el = document.createElement(event.track.kind);
+                el.srcObject = event.streams[0];
+                el.autoplay = true;
+                el.controls = true;
+                document.getElementById('remoteVideos').appendChild(el);
 
-        ws.onopen = async () => {
-            const pc = new RTCPeerConnection();
+                event.track.onmute = function(event) {
+                    el.play();
+                };
 
-            localStream.getTracks().forEach(track => {
-                pc.addTrack(track, localStream);
-            });
+                event.streams[0].onremovetrack = ({track}) => {
+                    if (el.parentNode) {
+                        el.parentNode.removeChild(el);
+                    }
+                };
+            };
 
-            pc.onicecandidate = event => {
-                if (event.candidate) {
-                    ws.send(JSON.stringify({ candidate: event.candidate.toJSON() }));
+            document.getElementById('localVideo').srcObject = stream; // Отобразить поток экрана
+            stream.getTracks().forEach(track => pc.addTrack(track, stream));
+
+            let ws = new WebSocket("{{.}}");
+            pc.onicecandidate = e => {
+                if (!e.candidate) {
+                    return;
+                }
+
+                ws.send(JSON.stringify({event: 'candidate', data: JSON.stringify(e.candidate)}));
+            };
+
+            ws.onclose = function(evt) {
+                window.alert("Websocket has closed");
+            };
+
+            ws.onmessage = function(evt) {
+                let msg = JSON.parse(evt.data);
+                if (!msg) {
+                    return console.log('failed to parse msg');
+                }
+
+                switch (msg.event) {
+                    case 'offer':
+                        let offer = JSON.parse(msg.data);
+                        if (!offer) {
+                            return console.log('failed to parse offer');
+                        }
+                        pc.setRemoteDescription(offer).then(() => {
+                            return pc.createAnswer();
+                        }).then(answer => {
+                            return pc.setLocalDescription(answer);
+                        }).then(() => {
+                            ws.send(JSON.stringify({event: 'answer', data: JSON.stringify(pc.localDescription)}));
+                        });
+                        return;
+
+                    case 'candidate':
+                        let candidate = JSON.parse(msg.data);
+                        if (!candidate) {
+                            return console.log('failed to parse candidate');
+                        }
+
+                        pc.addIceCandidate(candidate);
                 }
             };
 
-            pc.ontrack = event => {
-                const remoteVideo = document.createElement('video');
-                remoteVideo.srcObject = event.streams[0];
-                remoteVideo.autoplay = true;
-                document.body.appendChild(remoteVideo);
+            ws.onerror = function(evt) {
+                console.log("ERROR: " + evt.data);
             };
-
-            const offer = await pc.createOffer();
-            await pc.setLocalDescription(offer);
-            ws.send(JSON.stringify({ type: 'offer', sdp: offer.sdp }));
-        };
-
-        ws.onmessage = async event => {
-            const message = JSON.parse(event.data);
-
-            if (message.candidate) {
-                await pc.addIceCandidate(new RTCIceCandidate(message.candidate));
-            } else if (message.type === 'answer') {
-                await pc.setRemoteDescription(new RTCSessionDescription(message));
-            }
-        };
-    };
+        }).catch(window.alert);
 </script>
-</body>
+
 </html>
